changed send invite UI & added feature meta in view feature

--- a/mcarbonPortal/src/app/form-dialog/form-dialog.component.html
+++ b/mcarbonPortal/src/app/form-dialog/form-dialog.component.html
@@ -285,7 +285,7 @@
               />
               <button
                 class="btn btn-sm btn-photo"
-                class="logo"
+                id="logo"
                 (click)="fileInput.click()"
               >
                 Select a Logo
