--- a/mcarbonPortal/src/app/form-dialog/form-dialog.component.scss
+++ b/mcarbonPortal/src/app/form-dialog/form-dialog.component.scss
@@ -38,7 +38,8 @@
 }
 
 .btn-photo {
-  background-color: #009688;
+  background: linear-gradient(60deg, #009688, #17d1be);
+  color: white;
 }
 .btn-1 {
   background: linear-gradient(60deg, #009688, #17d1be);
