--- a/mcarbonPortal/src/app/session-join-dialog/session-join-dialog.component.scss
+++ b/mcarbonPortal/src/app/session-join-dialog/session-join-dialog.component.scss
@@ -249,3 +249,33 @@ img {
   font-weight: bold;
   font-size: 0.75rem;
 }
+
+.fbutton {
+  position: relative;
+  background: linear-gradient(0deg, #009688, #17d1be);
+  border: none;
+  color: rgb(255, 255, 255);
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 1rem;
+  margin: 10px 30px;
+  cursor: pointer;
+  transition-duration: 0.4s;
+  border-radius: 20px;
+  font-weight: bold;
+}
+
+/* Hover effect for the buttons */
+.fbutton:hover {
+  background-color: #cde5f9;
+}
+
+.fbutton {
+  padding: 8px 16px;
+  margin: 5px 15px;
+}
+
+#form1 {
+  margin-top: 10px;
+}
