--- a/mcarbonPortal/src/app/view-session-setting-dialog/view-session-setting-dialog.component.scss
+++ b/mcarbonPortal/src/app/view-session-setting-dialog/view-session-setting-dialog.component.scss
@@ -78,6 +78,9 @@ img {
 .label {
   font-weight: bolder;
   font-size: 1rem;
+  color: #009688;
+  display: flex;
+  justify-content: center;
 }
 
 .key {
