--- a/mcarbonPortal/src/app/view-access-dialog/view-access-dialog.component.scss
+++ b/mcarbonPortal/src/app/view-access-dialog/view-access-dialog.component.scss
@@ -79,3 +79,23 @@ img {
   font-weight: bolder;
   font-size: 1rem;
 }
+
+.feature-section {
+  display: flex;
+  justify-content: space-around;
+}
+
+.grid-container {
+  display: flex;
+  flex-direction: column;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: min-content;
+}
+
+.grid-item {
+  width: 90%;
+}
+
+.grid-item-content {
+  margin-left: 10%;
+}
