--- a/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/panel/question-panel/question-panel.component.html
+++ b/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/panel/question-panel/question-panel.component.html
@@ -1,4 +1,4 @@
-<div class="panel-container" id="chat-container" fxLayout="column" fxLayoutAlign="space-evenly none">
+<div class="panel-container" id="form-container" fxLayout="column" fxLayoutAlign="space-evenly none">
 	<div class="panel-header-container" fxLayoutAlign="start center">
 		<h3 class="panel-title">{{titleicdc}}</h3>
 		<button *ngIf="isClose" class="panel-close-button" mat-icon-button matTooltip="{{ 'PANEL.CLOSE' | translate }}" (click)="closeForm()">
@@ -6,7 +6,7 @@
 		</button>
 	</div>
 
-	<div class="question-container" fxFlex="75%" fxLayoutAlign="space-evenly none" (scroll)="onScroll()" #chatScroll>
+	<div class="question-container" fxFlex="75%" fxLayoutAlign="space-evenly none" (scroll)="onScroll()" #formScroll>
 		<div class="question-detail">
 			<form [formGroup]="form" (ngSubmit)="submitForm()" *ngIf="form">
 				<div class="icdc" *ngFor="let question of questions ; let i = index">
