--- a/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/panel/question-panel/question-panel.component.html
+++ b/openvidu-call/openvidu-call-front/projects/openvidu-angular/src/lib/components/panel/question-panel/question-panel.component.html
@@ -1,7 +1,13 @@
 <div class="panel-container" id="form-container" fxLayout="column" fxLayoutAlign="space-evenly none">
 	<div class="panel-header-container" fxLayoutAlign="start center">
-		<h3 class="panel-title">{{titleicdc}}</h3>
-		<button *ngIf="isClose" class="panel-close-button" mat-icon-button matTooltip="{{ 'PANEL.CLOSE' | translate }}" (click)="closeForm()">
+		<h3 class="panel-title">{{ titleicdc }}</h3>
+		<button
+			*ngIf="isClose"
+			class="panel-close-button"
+			mat-icon-button
+			matTooltip="{{ 'PANEL.CLOSE' | translate }}"
+			(click)="closeForm()"
+		>
 			<mat-icon>close</mat-icon>
 		</button>
 	</div>
@@ -9,58 +15,55 @@
 	<div class="question-container" fxFlex="75%" fxLayoutAlign="space-evenly none" (scroll)="onScroll()" #formScroll>
 		<div class="question-detail">
 			<form [formGroup]="form" (ngSubmit)="submitForm()" *ngIf="form">
-				<div class="icdc" *ngFor="let question of questions ; let i = index">
-					<div class = "question-block">
-						<label class="question">Q {{i+1}} . {{ question.question }}</label>
+				<div class="icdc" *ngFor="let question of questions; let i = index">
+					<div class="question-block">
+						<label class="question">Q {{ i + 1 }} . {{ question.question }}</label>
 					</div>
-				  <br />
-				  <ng-container [ngSwitch]="question.type">
-					<div *ngSwitchCase="'radio'">
-					  <label *ngFor="let option of question.meta">
-						<input 
-						type="radio"
-						[name]="question.q_id"
-						[formControlName]="question.q_id" 
-						[value]="option" 
-						class="custom-radio" 
-						/>
-						{{ option }}
-					  </label>
-					</div>
-					<div *ngSwitchCase="'checkbox'">
-						<div>
-						  <ng-container *ngFor="let option of question.meta">
-							<mat-checkbox
-							  [disabled]="!editicdc"
-							  [value]="option"
-							  [checked]="isOptionSelected(question.q_id, option)"
-							  (change)="updateSelectedAnswers(question.q_id , option, $event.checked)"
-							>
-							  {{ option }}
-							</mat-checkbox><br>
-						  </ng-container>
+					<br />
+					<ng-container [ngSwitch]="question.type">
+						<div *ngSwitchCase="'radio'">
+							<label *ngFor="let option of question.meta">
+								<input
+									type="radio"
+									[name]="question.q_id"
+									[formControlName]="question.q_id"
+									[value]="option"
+									class="custom-radio"
+								/>
+								{{ option }}
+							</label>
 						</div>
-					  </div>
-					<div style="padding-left: 20px;" *ngSwitchCase="'dropdown'">
-					  <select [formControlName]="question.q_id">
-						<option value="">Select an option</option>
-						<option *ngFor="let option of question.meta" [value]="option">{{ option }}</option>
-					  </select>
-					</div>
-					<div style="padding-left: 20px;" *ngSwitchDefault>
-					  <input type="text" [formControlName]="question.q_id" />
-					</div>
-				  </ng-container>
-				  <br/>
+						<div *ngSwitchCase="'checkbox'">
+							<div>
+								<ng-container *ngFor="let option of question.meta">
+									<mat-checkbox
+										[disabled]="!editicdc"
+										[value]="option"
+										[checked]="isOptionSelected(question.q_id, option)"
+										(change)="updateSelectedAnswers(question.q_id, option, $event.checked)"
+									>
+										{{ option }} </mat-checkbox
+									><br />
+								</ng-container>
+							</div>
+						</div>
+						<div style="padding-left: 20px" *ngSwitchCase="'dropdown'">
+							<select [formControlName]="question.q_id">
+								<option value="">Select an option</option>
+								<option *ngFor="let option of question.meta" [value]="option">{{ option }}</option>
+							</select>
+						</div>
+						<div style="padding-left: 20px" *ngSwitchDefault>
+							<input type="text" [formControlName]="question.q_id" />
+						</div>
+					</ng-container>
+					<br />
 				</div>
-		  
+
 				<div class="submit-button">
-					<button *ngIf="isSubmit" type="submit">Submit</button>	
-				</div>		 
-			  </form>
-			  
-			  
-						  
+					<button *ngIf="isSubmit" type="submit">Submit</button>
+				</div>
+			</form>
 		</div>
 	</div>
 </div>
