--- a/mcarbonPortal/src/app/question-icon/question-icon.component.html
+++ b/mcarbonPortal/src/app/question-icon/question-icon.component.html
@@ -4,6 +4,6 @@
     class="round-ques"
     (click)="showQuestion()"
   >
-    Q {{ question.qId + 1 }}
+    Q {{ question.q_id + 1 }}
   </button>
 </div>
