--- a/mcarbonPortal/src/app/question-icon/question-icon.component.scss
+++ b/mcarbonPortal/src/app/question-icon/question-icon.component.scss
@@ -1,7 +1,10 @@
 .round-ques {
   border-radius: 50%;
-  background-color: rgb(2, 179, 179, 0.5);
+  background: linear-gradient(60deg, #009688, #17d1be);
   color: white;
   width: 50px;
   height: 50px;
+  border: none;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
