fixed the logo issue

--- a/mcarbonPortal/src/app/feedback-form/feedback-form.component.html
+++ b/mcarbonPortal/src/app/feedback-form/feedback-form.component.html
@@ -130,7 +130,7 @@
                 <mat-icon>add_circle</mat-icon>
               </div>
               <div class="question-placeholder" *ngIf="showAnswerIcon">
-                <p>Drag and drop a question here</p>
+                <p>Drag and drop answers here</p>
               </div>
               <div class="" id="answer-div" cdkDropList (cdkDropListDropped)="arrangeAnswer($event)"></div>
             </div>
