--- a/mcarbonPortal/src/app/view-user-dialog/view-user-dialog.component.html
+++ b/mcarbonPortal/src/app/view-user-dialog/view-user-dialog.component.html
@@ -56,7 +56,7 @@
                     [matDatepicker]="picker"
                     formControlName="acc_exp_date"
                   />
-                  <mat-hint>MM/DD/YYYY</mat-hint>
+                  <mat-hint>DD/MM/YYYY</mat-hint>
                   <mat-datepicker-toggle
                     id="date-btn"
                     matIconSuffix
