--- a/mcarbonPortal/src/app/access-management/access-management.component.html
+++ b/mcarbonPortal/src/app/access-management/access-management.component.html
@@ -35,7 +35,7 @@
           <div class="card-body">
             <div class="table-responsive">
               <table
-                class="table"
+                class="table table-hover"
                 mat-table
                 matSort
                 [dataSource]="dataSourceWithPageSize"
