--- a/mcarbonPortal/src/app/account-management/account-management.component.html
+++ b/mcarbonPortal/src/app/account-management/account-management.component.html
@@ -38,7 +38,7 @@
           <div class="card-body">
             <div class="table-responsive">
               <table
-                class="table"
+                class="table table-hover" 
                 mat-table
                 matSort
                 [dataSource]="dataSourceWithPageSize"
