--- a/mcarbonPortal/src/app/form-dialog/form-dialog.component.html
+++ b/mcarbonPortal/src/app/form-dialog/form-dialog.component.html
@@ -111,7 +111,7 @@
                     [matTooltip]="getErrorMessage1('acc_exp_date')"
                     matTooltipClass="tooltip-style"
                   />
-                  <mat-hint>MM/DD/YYYY</mat-hint>
+                  <mat-hint>DD/MM/YYYY</mat-hint>
                   <mat-datepicker-toggle
                     id="date-btn"
                     matIconSuffix
