--- a/mcarbonPortal/src/app/login/login.component.scss
+++ b/mcarbonPortal/src/app/login/login.component.scss
@@ -114,7 +114,7 @@
 // }
 
 .back {
-  background-image: url("../../assets/img/login_back_1.png");
+  background-image: url("../../assets/img/login_bg_compressed.webp");
   background-repeat: no-repeat;
   background-size: contain;
   background-color: #ebe9e7;
