ICDC UI changes

--- a/mcarbonPortal/src/app/templates/answer-template/answer-template.component.html
+++ b/mcarbonPortal/src/app/templates/answer-template/answer-template.component.html
@@ -4,6 +4,7 @@
   cdkDrag
   cdkDragBoundary="#answer-div"
 >
+  <div class="row">Answers</div>
   <ng-container *ngSwitchCase="'text'" [formGroup]="ansForm">
     <div class="row answer">
       <div class="col-md-11">
