--- a/mcarbonPortal/src/app/templates/question-template/question-template.component.html
+++ b/mcarbonPortal/src/app/templates/question-template/question-template.component.html
@@ -1,5 +1,5 @@
-<div class="container q-container" [formGroup]="questionForm">
-  <div class="row">
+<div class="container q-container" >
+  <div class="row" [formGroup]="questionForm">
     <div class="col-md-1 ques-no ques-id">Q {{ this.questionId + 1 }}</div>
     <div class="col-md-8">
       <div class="ques">
