--- a/mcarbonPortal/src/app/feedback-form/feedback-form.component.html
+++ b/mcarbonPortal/src/app/feedback-form/feedback-form.component.html
@@ -72,19 +72,21 @@
         <div class="card">
           <div class="card-header card-header-danger">
             <div class="col-md-8 form-field">
-              <mat-form-field>
-                <mat-label class="form-name">Form Name</mat-label>
-                <input
-                  matInput
-                  type="text"
-                  placeholder="Form Name"
-                  [(ngModel)]="formName"
-                />
-              </mat-form-field>
+              <div class="form-name">
+                <mat-form-field appearance="none">
+                  <input
+                    matInput
+                    type="text"
+                    [(ngModel)]="formName"
+                    id="formName"
+                  />
+                </mat-form-field>
+              </div>
             </div>
             <div
               class="col-md-2"
               cdkDropList
+              (click)="onQuestionDrop($event)"
               (cdkDropListDropped)="onQuestionDrop($event)"
             >
               <div
@@ -99,6 +101,7 @@
             <div
               class="col-md-2"
               cdkDropList
+              (click)="onAnswerDrop($event)"
               (cdkDropListDropped)="onAnswerDrop($event)"
             >
               <div
@@ -122,7 +125,7 @@
               </div>
               <div class="" id="question-div" cdkDropList></div>
             </div>
-            <div
+            <!-- <div
               class="card card-body answer-body"
               *ngIf="checkQuestionDisable()"
             >
@@ -132,14 +135,19 @@
               <div class="question-placeholder" *ngIf="showAnswerIcon">
                 <p>Drag and drop answers here</p>
               </div>
-              <div class="" id="answer-div" cdkDropList (cdkDropListDropped)="arrangeAnswer($event)"></div>
-            </div>
+              <div
+                class=""
+                id="answer-div"
+                cdkDropList
+                (cdkDropListDropped)="arrangeAnswer($event)"
+              ></div>
+            </div> -->
           </div>
 
-          <div class="card-footer">
+          <div class="card-footer" *ngIf="questionDisable">
             <!-- <button class="btn btn-danger" (click)="onCancel()">Cancel</button> -->
             <button class="btn btn-success" (click)="saveQuestion()">
-              Save
+              Add
             </button>
           </div>
         </div>
