--- a/mcarbonPortal/src/app/feedback-form/feedback-form.component.scss
+++ b/mcarbonPortal/src/app/feedback-form/feedback-form.component.scss
@@ -15,7 +15,7 @@
   align-items: center;
   text-align: center;
   background: #fff;
-  border-radius: 50px;
+  border-radius: 40px;
   margin-right: 25px;
   position: relative;
   z-index: 1;
@@ -119,7 +119,7 @@
 
 .main-content {
   margin-top: 60px !important;
-  padding: 30px 15px 0px 30px !important;
+  padding: 30px 15px 0px 15px !important;
   min-height: calc(100vh - 60px) !important;
 }
 
@@ -132,11 +132,15 @@
   justify-content: flex-end !important;
 }
 
-.form-name {
-  color: white;
-}
-
 #question-div,
 #answer-div {
   width: inherit;
+}
+
+.form-name {
+  background-color: white;
+  color: rgb(48, 180, 152);
+  border-radius: 40px;
+  padding: 0px 40px 0px 40px;
+  height: 40px;
 }
